--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "api/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
+        "src": "/api/(.*)",            
+        "dest": "/api/index.js"
       },
       {
-        "src": "/(.*)",
-        "dest": "/index.js"
+        "src": "/(.*)",                 
+        "dest": "/public/$1"
       }
     ]
   }
+  
   
