--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.js",
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",            
-        "dest": "/api/index.js"
+        "src": "/api/(.*)",
+        "dest": "/index.js"
       },
       {
-        "src": "/(.*)",                 
-        "dest": "/public/$1"
+        "src": "/(.*)",
+        "dest": "/index.js"
       }
     ]
   }
