--- a/vercel.json
+++ b/vercel.json
@@ -14,9 +14,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/public/$1"
+      "dest": "/public/$1",
+      "headers": { "cache-control": "max-age=31536000, immutable" }
     }
   ]
 }
-
-  
