--- a/vercel.json
+++ b/vercel.json
@@ -7,15 +7,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/index.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1",
-      "headers": { "cache-control": "max-age=31536000, immutable" }
-    }
+    { "src": "/api/(.*)", "dest": "/index.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
