--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,23 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+      {
+          "src": "index.js",
+          "use": "@vercel/node"
+      }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1",
-      "methods": ["GET", "POST", "OPTIONS"]
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
+      {
+          "src": "/api/vote",
+          "dest": "/api/vote.js"
+      },
+      {
+          "src": "/api/results",
+          "dest": "/api/results.js"
+      },
+      {
+          "src": "/(.*)",
+          "dest": "/index.js"
+      }
   ]
 }
